aquaeductus up and running

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -117,12 +117,12 @@ services:
       - CTF_DBPASSWORD=9iyzXY6pMYzRvXZi
       - CTF_METRICS_LISTEN=0.0.0.0:9100
 
-  gameserver-checker-example:
+  aquaeductus-checker-service:
     #image: wert310/gameserver-basechecker:latest
     build:
       context: .
       dockerfile: Dockerfile
-      target: checkerbase
+      target: aquaeductus-checker
     depends_on:
       - gameserver-postgres
     restart: on-failure
@@ -131,7 +131,7 @@ services:
     networks:
       - gameserver
     volumes:
-      - ./aquaeductus-checker/checker.py:/checker/checker.py
+      - ./checkers/aquaeductus-checker/checker.py:/checker/checker.py
     user: ctf-checkermaster
     environment:
       - CTF_LOGLEVEL=DEBUG
@@ -150,37 +150,3 @@ services:
       - CTF_CHECKERCOUNT=1
       - CTF_INTERVAL=10
 
-  #gameserver-checker-example-100:
-  #  image: wert310/gameserver-basechecker:ef3af01
-  #  build:
-  #    context: .
-  #    dockerfile: Dockerfile
-  #    target: checkerbase
-  #  depends_on:
-  #    - gameserver-postgres
-  #  restart: on-failure
-  #  ports:
-  #    - 9101:9101
-  #  networks:
-  #    - gameserver
-  #  volumes:
-  #    - ./aquaeductus-checker/checker.py:/checker/checker.py
-  #  user: ctf-checkermaster
-  #  environment:
-  #    - CTF_LOGLEVEL=DEBUG
-  #    - CTF_DBHOST=gameserver-postgres
-  #    - CTF_DBNAME=ctf-gameserver
-  #    - CTF_DBUSER=ctf-gameserver
-  #    - CTF_DBPASSWORD=9iyzXY6pMYzRvXZi
-  #    - CTF_METRICS_LISTEN=0.0.0.0:9101
-  #    - CTF_SUDOUSER=ctf-checkerrunner
-  #    - CTF_IPPATTERN=172.16.%s.1
-  #    - CTF_FLAGSECRET=KWmRQ5HxPzPeFPHu
-  #    # - "CTF_LOKI_URL=https://...@logs-prod-eu-west-0.grafana.net/loki/api/v1/push"
-  #    # Service specific
-  #    - CTF_SERVICE=service1_checker1
-  #    - CTF_CHECKERSCRIPT=/checker/checker.py
-  #    - CTF_CHECKERCOUNT=1
-  #    - CTF_INTERVAL=10
-#
-#
