--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -118,11 +118,9 @@ services:
       - CTF_METRICS_LISTEN=0.0.0.0:9100
 
   aquaeductus-checker-service:
-    #image: wert310/gameserver-basechecker:latest
     build:
       context: services-checkers/aq/checker1/.
       dockerfile: Dockerfile
-      #target: aquaeductus-checker
     depends_on:
       - gameserver-postgres
     restart: on-failure
@@ -130,11 +128,9 @@ services:
       - 9101:9101
     networks:
       - gameserver
-    #volumes:
-    #  - ./checkers/aquaeductus-checker/checker.py:/checker/checker.py
     user: ctf-checkermaster
     environment:
-      - CTF_LOGLEVEL=INFO
+      - CTF_LOGLEVEL=WARNING
       - CTF_DBHOST=gameserver-postgres
       - CTF_DBNAME=ctf-gameserver
       - CTF_DBUSER=ctf-gameserver
@@ -163,11 +159,9 @@ services:
       - 9102:9101
     networks:
       - gameserver
-    #volumes:
-    #  - ./checkers/aquaeductus-checker/checker.py:/checker/checker.py
     user: ctf-checkermaster
     environment:
-      - CTF_LOGLEVEL=INFO
+      - CTF_LOGLEVEL=WARNING
       - CTF_DBHOST=gameserver-postgres
       - CTF_DBNAME=ctf-gameserver
       - CTF_DBUSER=ctf-gameserver
@@ -196,11 +190,9 @@ services:
       - 9103:9101
     networks:
       - gameserver
-    #volumes:
-    #  - ./checkers/aquaeductus-checker/checker.py:/checker/checker.py
     user: ctf-checkermaster
     environment:
-      - CTF_LOGLEVEL=INFO
+      - CTF_LOGLEVEL=WARNING
       - CTF_DBHOST=gameserver-postgres
       - CTF_DBNAME=ctf-gameserver
       - CTF_DBUSER=ctf-gameserver
@@ -229,11 +221,9 @@ services:
       - 9104:9101
     networks:
       - gameserver
-    #volumes:
-    #  - ./checkers/aquaeductus-checker/checker.py:/checker/checker.py
     user: ctf-checkermaster
     environment:
-      - CTF_LOGLEVEL=INFO
+      - CTF_LOGLEVEL=WARNING
       - CTF_DBHOST=gameserver-postgres
       - CTF_DBNAME=ctf-gameserver
       - CTF_DBUSER=ctf-gameserver
@@ -263,11 +253,9 @@ services:
       - 9105:9101
     networks:
       - gameserver
-    #volumes:
-    #  - ./checkers/aquaeductus-checker/checker.py:/checker/checker.py
     user: ctf-checkermaster
     environment:
-      - CTF_LOGLEVEL=INFO
+      - CTF_LOGLEVEL=WARNING
       - CTF_DBHOST=gameserver-postgres
       - CTF_DBNAME=ctf-gameserver
       - CTF_DBUSER=ctf-gameserver
@@ -301,7 +289,7 @@ services:
     #  - ./checkers/aquaeductus-checker/checker.py:/checker/checker.py
     user: ctf-checkermaster
     environment:
-      - CTF_LOGLEVEL=INFO
+      - CTF_LOGLEVEL=WARNING
       - CTF_DBHOST=gameserver-postgres
       - CTF_DBNAME=ctf-gameserver
       - CTF_DBUSER=ctf-gameserver
@@ -334,7 +322,7 @@ services:
     #  - ./checkers/aquaeductus-checker/checker.py:/checker/checker.py
     user: ctf-checkermaster
     environment:
-      - CTF_LOGLEVEL=INFO
+      - CTF_LOGLEVEL=WARNING
       - CTF_DBHOST=gameserver-postgres
       - CTF_DBNAME=ctf-gameserver
       - CTF_DBUSER=ctf-gameserver
@@ -368,7 +356,7 @@ services:
     #  - ./checkers/aquaeductus-checker/checker.py:/checker/checker.py
     user: ctf-checkermaster
     environment:
-      - CTF_LOGLEVEL=INFO
+      - CTF_LOGLEVEL=WARNING
       - CTF_DBHOST=gameserver-postgres
       - CTF_DBNAME=ctf-gameserver
       - CTF_DBUSER=ctf-gameserver
