--- a/init/ansible/group_vars/all.yaml
+++ b/init/ansible/group_vars/all.yaml
@@ -2,12 +2,12 @@
 competition_name: "ECSC 2022 | Attack-Defense"
 # dates in UTC, Vienna local time is 2h later
 services_public: '2022-09-04 19:00:00+00' # TODO change
-event_start:     '2023-06-22 14:32:00+00' # TODO change
+event_start:     '2023-06-26 08:12:00+00' # TODO change
 event_freeze:    '2023-06-22 07:52:00+00'
 event_end:       '2023-09-18 19:59:00+00'
 tick_duration: 60 # TODO change
 valid_ticks: 5 # NOTE: changing this value also requires adjusting the checkerlib and the scoreboard
-flag_prefix: 'ECSC_'
+flag_prefix: 'DREAM_'
 
 gamedb_host: gameserver-postgres
 pgpassword: 9iyzXY6pMYzRvXZi
@@ -17,15 +17,15 @@ game_servicegroups:
 - {id: 2, name: "blinkygram", slug: "service2"}
 - {id: 3, name: "cantina", slug: "service3"}
 - {id: 4, name: "dewaste", slug: "service4"}
-- {id: 5, name: "hps", slug: "service5"}
-- {id: 6, name: "techbay", slug: "service6"}
-- {id: 7, name: "winds-of-the-past", slug: "service7"}
+#- {id: 5, name: "hps", slug: "service5"}
+#- {id: 6, name: "techbay", slug: "service6"}
+#- {id: 7, name: "winds-of-the-past", slug: "service7"}
 
 game_services:
 - {id:  1, group: 1, name: "Service 1 Checker 1", slug: "aquaeductus_checker1"}
 
 - {id:  2, group: 2, name: "Service 2 Checker 1", slug: "blinkygram_checker1"}
-- {id:  3, group: 2, name: "Service 2 Checker 2", slug: "blinkygram_checker2"}
+#- {id:  3, group: 2, name: "Service 2 Checker 2", slug: "blinkygram_checker2"}
 #- {id:  4, group: 2, name: "Service 2 Checker 3", slug: "service2_checker3"}
 
 - {id:  4, group: 3, name: "Service 3 Checker 1", slug: "cantina_checker1"}
@@ -35,13 +35,13 @@ game_services:
 - {id:  5, group: 4, name: "Service 4 Checker 1", slug: "dewaste_checker1"}
 #- {id:  9, group: 4, name: "Service 4 Checker 2", slug: "service4_checker2"}
 
-- {id: 6, group: 5, name: "Service 5 Checker 1", slug: "hps_checker1"}
+#- {id: 6, group: 5, name: "Service 5 Checker 1", slug: "hps_checker1"}
 #- {id: 11, group: 5, name: "Service 5 Checker 2", slug: "service5_checker2"}
 
-- {id: 7, group: 6, name: "Service 6 Checker 1", slug: "techbay_checker1"}
+#- {id: 7, group: 6, name: "Service 6 Checker 1", slug: "techbay_checker1"}
 #- {id: 13, group: 6, name: "Service 6 Checker 2", slug: "service6_checker2"}
 
-- {id: 8, group: 7, name: "Service 7 Checker 1", slug: "windsOfThePast_checker1"}
+#- {id: 8, group: 7, name: "Service 7 Checker 1", slug: "windsOfThePast_checker1"}
 
 
 teams: # TODO replace passwords with proper ones
