--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -58,7 +58,7 @@ services:
     ports:
       - 5000:5000
     environment:
-      - CTF_IPPATTERN=172.16.%s.62
+      - CTF_IPPATTERN=172.16.%s.1
 
   gameserver-scoreboard:
     build:
@@ -137,7 +137,7 @@ services:
       - CTF_DBPASSWORD=9iyzXY6pMYzRvXZi
       - CTF_METRICS_LISTEN=0.0.0.0:9101
       - CTF_SUDOUSER=ctf-checkerrunner
-      - CTF_IPPATTERN=172.16.%s.62
+      - CTF_IPPATTERN=172.16.%s.1
       - CTF_FLAGSECRET=KWmRQ5HxPzPeFPHu
       # - "CTF_LOKI_URL=https://...@logs-prod-eu-west-0.grafana.net/loki/api/v1/push"
       # Service specific
@@ -168,7 +168,7 @@ services:
       - CTF_DBPASSWORD=9iyzXY6pMYzRvXZi
       - CTF_METRICS_LISTEN=0.0.0.0:9101
       - CTF_SUDOUSER=ctf-checkerrunner
-      - CTF_IPPATTERN=172.16.%s.62
+      - CTF_IPPATTERN=172.16.%s.1
       - CTF_FLAGSECRET=KWmRQ5HxPzPeFPHu
       # - "CTF_LOKI_URL=https://...@logs-prod-eu-west-0.grafana.net/loki/api/v1/push"
       # Service specific
@@ -177,36 +177,36 @@ services:
       - CTF_CHECKERCOUNT=1
       - CTF_INTERVAL=10
 
-  blinkygram-checker2-service:
-    #image: wert310/gameserver-basechecker:latest
-    build:
-      context: services-checkers/bl/checker2/.
-      dockerfile: Dockerfile
-      #target: aquaeductus-checker
-    depends_on:
-      - gameserver-postgres
-    restart: on-failure
-    ports:
-      - 9103:9101
-    networks:
-      - gameserver
-    user: ctf-checkermaster
-    environment:
-      - CTF_LOGLEVEL=WARNING
-      - CTF_DBHOST=gameserver-postgres
-      - CTF_DBNAME=ctf-gameserver
-      - CTF_DBUSER=ctf-gameserver
-      - CTF_DBPASSWORD=9iyzXY6pMYzRvXZi
-      - CTF_METRICS_LISTEN=0.0.0.0:9101
-      - CTF_SUDOUSER=ctf-checkerrunner
-      - CTF_IPPATTERN=172.16.%s.62
-      - CTF_FLAGSECRET=KWmRQ5HxPzPeFPHu
-      # - "CTF_LOKI_URL=https://...@logs-prod-eu-west-0.grafana.net/loki/api/v1/push"
-      # Service specific
-      - CTF_SERVICE=blinkygram_checker2
-      - CTF_CHECKERSCRIPT=/checker/checker.py
-      - CTF_CHECKERCOUNT=1
-      - CTF_INTERVAL=10
+  #blinkygram-checker2-service:
+  #  #image: wert310/gameserver-basechecker:latest
+  #  build:
+  #    context: services-checkers/bl/checker2/.
+  #    dockerfile: Dockerfile
+  #    #target: aquaeductus-checker
+  #  depends_on:
+  #    - gameserver-postgres
+  #  restart: on-failure
+  #  ports:
+  #    - 9103:9101
+  #  networks:
+  #    - gameserver
+  #  user: ctf-checkermaster
+  #  environment:
+  #    - CTF_LOGLEVEL=WARNING
+  #    - CTF_DBHOST=gameserver-postgres
+  #    - CTF_DBNAME=ctf-gameserver
+  #    - CTF_DBUSER=ctf-gameserver
+  #    - CTF_DBPASSWORD=9iyzXY6pMYzRvXZi
+  #    - CTF_METRICS_LISTEN=0.0.0.0:9101
+  #    - CTF_SUDOUSER=ctf-checkerrunner
+  #    - CTF_IPPATTERN=172.16.%s.1
+  #    - CTF_FLAGSECRET=KWmRQ5HxPzPeFPHu
+  #    # - "CTF_LOKI_URL=https://...@logs-prod-eu-west-0.grafana.net/loki/api/v1/push"
+  #    # Service specific
+  #    - CTF_SERVICE=blinkygram_checker2
+  #    - CTF_CHECKERSCRIPT=/checker/checker.py
+  #    - CTF_CHECKERCOUNT=1
+  #    - CTF_INTERVAL=10
 
   cantina-checker-service:
     #image: wert310/gameserver-basechecker:latest
@@ -230,7 +230,7 @@ services:
       - CTF_DBPASSWORD=9iyzXY6pMYzRvXZi
       - CTF_METRICS_LISTEN=0.0.0.0:9101
       - CTF_SUDOUSER=ctf-checkerrunner
-      - CTF_IPPATTERN=172.16.%s.62
+      - CTF_IPPATTERN=172.16.%s.1
       - CTF_FLAGSECRET=KWmRQ5HxPzPeFPHu
       # - "CTF_LOKI_URL=https://...@logs-prod-eu-west-0.grafana.net/loki/api/v1/push"
       # Service specific
@@ -262,7 +262,7 @@ services:
       - CTF_DBPASSWORD=9iyzXY6pMYzRvXZi
       - CTF_METRICS_LISTEN=0.0.0.0:9101
       - CTF_SUDOUSER=ctf-checkerrunner
-      - CTF_IPPATTERN=172.16.%s.62
+      - CTF_IPPATTERN=172.16.%s.1
       - CTF_FLAGSECRET=KWmRQ5HxPzPeFPHu
       # - "CTF_LOKI_URL=https://...@logs-prod-eu-west-0.grafana.net/loki/api/v1/push"
       # Service specific
@@ -272,103 +272,103 @@ services:
       - CTF_INTERVAL=10
 
 
-  hps-checker-service:
-    #image: wert310/gameserver-basechecker:latest
-    build:
-      context: services-checkers/hp/checker1
-      dockerfile: Dockerfile
-      #target: aquaeductus-checker
-    depends_on:
-      - gameserver-postgres
-    restart: on-failure
-    ports:
-      - 9106:9101
-    networks:
-      - gameserver
-    #volumes:
-    #  - ./checkers/aquaeductus-checker/checker.py:/checker/checker.py
-    user: ctf-checkermaster
-    environment:
-      - CTF_LOGLEVEL=WARNING
-      - CTF_DBHOST=gameserver-postgres
-      - CTF_DBNAME=ctf-gameserver
-      - CTF_DBUSER=ctf-gameserver
-      - CTF_DBPASSWORD=9iyzXY6pMYzRvXZi
-      - CTF_METRICS_LISTEN=0.0.0.0:9101
-      - CTF_SUDOUSER=ctf-checkerrunner
-      - CTF_IPPATTERN=172.16.%s.62
-      - CTF_FLAGSECRET=KWmRQ5HxPzPeFPHu
-      # - "CTF_LOKI_URL=https://...@logs-prod-eu-west-0.grafana.net/loki/api/v1/push"
-      # Service specific
-      - CTF_SERVICE=hps_checker1
-      - CTF_CHECKERSCRIPT=/checker/checker.py
-      - CTF_CHECKERCOUNT=1
-      - CTF_INTERVAL=10
+#  hps-checker-service:
+#    #image: wert310/gameserver-basechecker:latest
+#    build:
+#      context: services-checkers/hp/checker1
+#      dockerfile: Dockerfile
+#      #target: aquaeductus-checker
+#    depends_on:
+#      - gameserver-postgres
+#    restart: on-failure
+#    ports:
+#      - 9106:9101
+#    networks:
+#      - gameserver
+#    #volumes:
+#    #  - ./checkers/aquaeductus-checker/checker.py:/checker/checker.py
+#    user: ctf-checkermaster
+#    environment:
+#      - CTF_LOGLEVEL=WARNING
+#      - CTF_DBHOST=gameserver-postgres
+#      - CTF_DBNAME=ctf-gameserver
+#      - CTF_DBUSER=ctf-gameserver
+#      - CTF_DBPASSWORD=9iyzXY6pMYzRvXZi
+#      - CTF_METRICS_LISTEN=0.0.0.0:9101
+#      - CTF_SUDOUSER=ctf-checkerrunner
+#      - CTF_IPPATTERN=172.16.%s.1
+#      - CTF_FLAGSECRET=KWmRQ5HxPzPeFPHu
+#      # - "CTF_LOKI_URL=https://...@logs-prod-eu-west-0.grafana.net/loki/api/v1/push"
+#      # Service specific
+#      - CTF_SERVICE=hps_checker1
+#      - CTF_CHECKERSCRIPT=/checker/checker.py
+#      - CTF_CHECKERCOUNT=1
+#      - CTF_INTERVAL=10
+#
+#  techbay-checker-service:
+#    #image: wert310/gameserver-basechecker:latest
+#    build:
+#      context: services-checkers/te/checker1
+#      dockerfile: Dockerfile
+#      #target: aquaeductus-checker
+#    depends_on:
+#      - gameserver-postgres
+#    restart: on-failure
+#    ports:
+#      - 9107:9101
+#    networks:
+#      - gameserver
+#    #volumes:
+#    #  - ./checkers/aquaeductus-checker/checker.py:/checker/checker.py
+#    user: ctf-checkermaster
+#    environment:
+#      - CTF_LOGLEVEL=WARNING
+#      - CTF_DBHOST=gameserver-postgres
+#      - CTF_DBNAME=ctf-gameserver
+#      - CTF_DBUSER=ctf-gameserver
+#      - CTF_DBPASSWORD=9iyzXY6pMYzRvXZi
+#      - CTF_METRICS_LISTEN=0.0.0.0:9101
+#      - CTF_SUDOUSER=ctf-checkerrunner
+#      - CTF_IPPATTERN=172.16.%s.1
+#      - CTF_FLAGSECRET=KWmRQ5HxPzPeFPHu
+#      # - "CTF_LOKI_URL=https://...@logs-prod-eu-west-0.grafana.net/loki/api/v1/push"
+#      # Service specific
+#      - CTF_SERVICE=techbay_checker1
+#      - CTF_CHECKERSCRIPT=/checker/checker.py
+#      - CTF_CHECKERCOUNT=1
+#      - CTF_INTERVAL=10
+#
+#
+#  windsofthepast-checker-service:
+#    #image: wert310/gameserver-basechecker:latest
+#    build:
+#      context: services-checkers/wi/checker1
+#      dockerfile: Dockerfile
+#      #target: aquaeductus-checker
+#    depends_on:
+#      - gameserver-postgres
+#    restart: on-failure
+#    ports:
+#      - 9108:9101
+#    networks:
+#      - gameserver
+#    #volumes:
+#    #  - ./checkers/aquaeductus-checker/checker.py:/checker/checker.py
+#    user: ctf-checkermaster
+#    environment:
+#      - CTF_LOGLEVEL=WARNING
+#      - CTF_DBHOST=gameserver-postgres
+#      - CTF_DBNAME=ctf-gameserver
+#      - CTF_DBUSER=ctf-gameserver
+#      - CTF_DBPASSWORD=9iyzXY6pMYzRvXZi
+#      - CTF_METRICS_LISTEN=0.0.0.0:9101
+#      - CTF_SUDOUSER=ctf-checkerrunner
+#      - CTF_IPPATTERN=172.16.%s.1
+#      - CTF_FLAGSECRET=KWmRQ5HxPzPeFPHu
+#      # - "CTF_LOKI_URL=https://...@logs-prod-eu-west-0.grafana.net/loki/api/v1/push"
+#      # Service specific
+#      - CTF_SERVICE=windsOfThePast_checker1
+#      - CTF_CHECKERSCRIPT=/checker/checker.py
+#      - CTF_CHECKERCOUNT=1
+#      - CTF_INTERVAL=10
 
-  techbay-checker-service:
-    #image: wert310/gameserver-basechecker:latest
-    build:
-      context: services-checkers/te/checker1
-      dockerfile: Dockerfile
-      #target: aquaeductus-checker
-    depends_on:
-      - gameserver-postgres
-    restart: on-failure
-    ports:
-      - 9107:9101
-    networks:
-      - gameserver
-    #volumes:
-    #  - ./checkers/aquaeductus-checker/checker.py:/checker/checker.py
-    user: ctf-checkermaster
-    environment:
-      - CTF_LOGLEVEL=WARNING
-      - CTF_DBHOST=gameserver-postgres
-      - CTF_DBNAME=ctf-gameserver
-      - CTF_DBUSER=ctf-gameserver
-      - CTF_DBPASSWORD=9iyzXY6pMYzRvXZi
-      - CTF_METRICS_LISTEN=0.0.0.0:9101
-      - CTF_SUDOUSER=ctf-checkerrunner
-      - CTF_IPPATTERN=172.16.%s.62
-      - CTF_FLAGSECRET=KWmRQ5HxPzPeFPHu
-      # - "CTF_LOKI_URL=https://...@logs-prod-eu-west-0.grafana.net/loki/api/v1/push"
-      # Service specific
-      - CTF_SERVICE=techbay_checker1
-      - CTF_CHECKERSCRIPT=/checker/checker.py
-      - CTF_CHECKERCOUNT=1
-      - CTF_INTERVAL=10
-
-
-  windsofthepast-checker-service:
-    #image: wert310/gameserver-basechecker:latest
-    build:
-      context: services-checkers/wi/checker1
-      dockerfile: Dockerfile
-      #target: aquaeductus-checker
-    depends_on:
-      - gameserver-postgres
-    restart: on-failure
-    ports:
-      - 9108:9101
-    networks:
-      - gameserver
-    #volumes:
-    #  - ./checkers/aquaeductus-checker/checker.py:/checker/checker.py
-    user: ctf-checkermaster
-    environment:
-      - CTF_LOGLEVEL=WARNING
-      - CTF_DBHOST=gameserver-postgres
-      - CTF_DBNAME=ctf-gameserver
-      - CTF_DBUSER=ctf-gameserver
-      - CTF_DBPASSWORD=9iyzXY6pMYzRvXZi
-      - CTF_METRICS_LISTEN=0.0.0.0:9101
-      - CTF_SUDOUSER=ctf-checkerrunner
-      - CTF_IPPATTERN=172.16.%s.62
-      - CTF_FLAGSECRET=KWmRQ5HxPzPeFPHu
-      # - "CTF_LOKI_URL=https://...@logs-prod-eu-west-0.grafana.net/loki/api/v1/push"
-      # Service specific
-      - CTF_SERVICE=windsOfThePast_checker1
-      - CTF_CHECKERSCRIPT=/checker/checker.py
-      - CTF_CHECKERCOUNT=1
-      - CTF_INTERVAL=10
-    
