--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -117,65 +117,65 @@ services:
       - CTF_DBPASSWORD=9iyzXY6pMYzRvXZi
       - CTF_METRICS_LISTEN=0.0.0.0:9100
 
-  aquaeductus-checker-service:
-    build:
-      context: services-checkers/aq/checker1/.
-      dockerfile: Dockerfile
-    depends_on:
-      - gameserver-postgres
-    restart: on-failure
-    ports:
-      - 9101:9101
-    networks:
-      - gameserver
-    user: ctf-checkermaster
-    environment:
-      - CTF_LOGLEVEL=WARNING
-      - CTF_DBHOST=gameserver-postgres
-      - CTF_DBNAME=ctf-gameserver
-      - CTF_DBUSER=ctf-gameserver
-      - CTF_DBPASSWORD=9iyzXY6pMYzRvXZi
-      - CTF_METRICS_LISTEN=0.0.0.0:9101
-      - CTF_SUDOUSER=ctf-checkerrunner
-      - CTF_IPPATTERN=172.16.%s.1
-      - CTF_FLAGSECRET=KWmRQ5HxPzPeFPHu
-      # - "CTF_LOKI_URL=https://...@logs-prod-eu-west-0.grafana.net/loki/api/v1/push"
-      # Service specific
-      - CTF_SERVICE=aquaeductus_checker1
-      - CTF_CHECKERSCRIPT=/checker/checker.py
-      - CTF_CHECKERCOUNT=1
-      - CTF_INTERVAL=10
-
-  blinkygram-checker1-service:
-    #image: wert310/gameserver-basechecker:latest
-    build:
-      context: services-checkers/bl/checker1/.
-      dockerfile: Dockerfile
-      #target: aquaeductus-checker
-    depends_on:
-      - gameserver-postgres
-    restart: on-failure
-    ports:
-      - 9102:9101
-    networks:
-      - gameserver
-    user: ctf-checkermaster
-    environment:
-      - CTF_LOGLEVEL=WARNING
-      - CTF_DBHOST=gameserver-postgres
-      - CTF_DBNAME=ctf-gameserver
-      - CTF_DBUSER=ctf-gameserver
-      - CTF_DBPASSWORD=9iyzXY6pMYzRvXZi
-      - CTF_METRICS_LISTEN=0.0.0.0:9101
-      - CTF_SUDOUSER=ctf-checkerrunner
-      - CTF_IPPATTERN=172.16.%s.1
-      - CTF_FLAGSECRET=KWmRQ5HxPzPeFPHu
-      # - "CTF_LOKI_URL=https://...@logs-prod-eu-west-0.grafana.net/loki/api/v1/push"
-      # Service specific
-      - CTF_SERVICE=blinkygram_checker1
-      - CTF_CHECKERSCRIPT=/checker/checker.py
-      - CTF_CHECKERCOUNT=1
-      - CTF_INTERVAL=10
+#  aquaeductus-checker-service:
+#    build:
+#      context: services-checkers/aq/checker1/.
+#      dockerfile: Dockerfile
+#    depends_on:
+#      - gameserver-postgres
+#    restart: on-failure
+#    ports:
+#      - 9101:9101
+#    networks:
+#      - gameserver
+#    user: ctf-checkermaster
+#    environment:
+#      - CTF_LOGLEVEL=WARNING
+#      - CTF_DBHOST=gameserver-postgres
+#      - CTF_DBNAME=ctf-gameserver
+#      - CTF_DBUSER=ctf-gameserver
+#      - CTF_DBPASSWORD=9iyzXY6pMYzRvXZi
+#      - CTF_METRICS_LISTEN=0.0.0.0:9101
+#      - CTF_SUDOUSER=ctf-checkerrunner
+#      - CTF_IPPATTERN=172.16.%s.1
+#      - CTF_FLAGSECRET=KWmRQ5HxPzPeFPHu
+#      # - "CTF_LOKI_URL=https://...@logs-prod-eu-west-0.grafana.net/loki/api/v1/push"
+#      # Service specific
+#      - CTF_SERVICE=aquaeductus_checker1
+#      - CTF_CHECKERSCRIPT=/checker/checker.py
+#      - CTF_CHECKERCOUNT=1
+#      - CTF_INTERVAL=10
+#
+#  blinkygram-checker1-service:
+#    #image: wert310/gameserver-basechecker:latest
+#    build:
+#      context: services-checkers/bl/checker1/.
+#      dockerfile: Dockerfile
+#      #target: aquaeductus-checker
+#    depends_on:
+#      - gameserver-postgres
+#    restart: on-failure
+#    ports:
+#      - 9102:9101
+#    networks:
+#      - gameserver
+#    user: ctf-checkermaster
+#    environment:
+#      - CTF_LOGLEVEL=WARNING
+#      - CTF_DBHOST=gameserver-postgres
+#      - CTF_DBNAME=ctf-gameserver
+#      - CTF_DBUSER=ctf-gameserver
+#      - CTF_DBPASSWORD=9iyzXY6pMYzRvXZi
+#      - CTF_METRICS_LISTEN=0.0.0.0:9101
+#      - CTF_SUDOUSER=ctf-checkerrunner
+#      - CTF_IPPATTERN=172.16.%s.1
+#      - CTF_FLAGSECRET=KWmRQ5HxPzPeFPHu
+#      # - "CTF_LOKI_URL=https://...@logs-prod-eu-west-0.grafana.net/loki/api/v1/push"
+#      # Service specific
+#      - CTF_SERVICE=blinkygram_checker1
+#      - CTF_CHECKERSCRIPT=/checker/checker.py
+#      - CTF_CHECKERCOUNT=1
+#      - CTF_INTERVAL=10
 
   #blinkygram-checker2-service:
   #  #image: wert310/gameserver-basechecker:latest
@@ -230,7 +230,7 @@ services:
       - CTF_DBPASSWORD=9iyzXY6pMYzRvXZi
       - CTF_METRICS_LISTEN=0.0.0.0:9101
       - CTF_SUDOUSER=ctf-checkerrunner
-      - CTF_IPPATTERN=172.16.%s.1
+      - CTF_IPPATTERN=172.16.%s.62
       - CTF_FLAGSECRET=KWmRQ5HxPzPeFPHu
       # - "CTF_LOKI_URL=https://...@logs-prod-eu-west-0.grafana.net/loki/api/v1/push"
       # Service specific
@@ -239,39 +239,39 @@ services:
       - CTF_CHECKERCOUNT=1
       - CTF_INTERVAL=10
 
-
-  dewaste-checker-service:
-    #image: wert310/gameserver-basechecker:latest
-    build:
-      context: services-checkers/de/checker1
-      dockerfile: Dockerfile
-      #target: aquaeductus-checker
-    depends_on:
-      - gameserver-postgres
-    restart: on-failure
-    ports:
-      - 9105:9101
-    networks:
-      - gameserver
-    user: ctf-checkermaster
-    environment:
-      - CTF_LOGLEVEL=WARNING
-      - CTF_DBHOST=gameserver-postgres
-      - CTF_DBNAME=ctf-gameserver
-      - CTF_DBUSER=ctf-gameserver
-      - CTF_DBPASSWORD=9iyzXY6pMYzRvXZi
-      - CTF_METRICS_LISTEN=0.0.0.0:9101
-      - CTF_SUDOUSER=ctf-checkerrunner
-      - CTF_IPPATTERN=172.16.%s.1
-      - CTF_FLAGSECRET=KWmRQ5HxPzPeFPHu
-      # - "CTF_LOKI_URL=https://...@logs-prod-eu-west-0.grafana.net/loki/api/v1/push"
-      # Service specific
-      - CTF_SERVICE=dewaste_checker1
-      - CTF_CHECKERSCRIPT=/checker/checker.py
-      - CTF_CHECKERCOUNT=1
-      - CTF_INTERVAL=10
-
-
+#
+#  dewaste-checker-service:
+#    #image: wert310/gameserver-basechecker:latest
+#    build:
+#      context: services-checkers/de/checker1
+#      dockerfile: Dockerfile
+#      #target: aquaeductus-checker
+#    depends_on:
+#      - gameserver-postgres
+#    restart: on-failure
+#    ports:
+#      - 9105:9101
+#    networks:
+#      - gameserver
+#    user: ctf-checkermaster
+#    environment:
+#      - CTF_LOGLEVEL=WARNING
+#      - CTF_DBHOST=gameserver-postgres
+#      - CTF_DBNAME=ctf-gameserver
+#      - CTF_DBUSER=ctf-gameserver
+#      - CTF_DBPASSWORD=9iyzXY6pMYzRvXZi
+#      - CTF_METRICS_LISTEN=0.0.0.0:9101
+#      - CTF_SUDOUSER=ctf-checkerrunner
+#      - CTF_IPPATTERN=172.16.%s.1
+#      - CTF_FLAGSECRET=KWmRQ5HxPzPeFPHu
+#      # - "CTF_LOKI_URL=https://...@logs-prod-eu-west-0.grafana.net/loki/api/v1/push"
+#      # Service specific
+#      - CTF_SERVICE=dewaste_checker1
+#      - CTF_CHECKERSCRIPT=/checker/checker.py
+#      - CTF_CHECKERCOUNT=1
+#      - CTF_INTERVAL=10
+#
+#
 #  hps-checker-service:
 #    #image: wert310/gameserver-basechecker:latest
 #    build:
